# advent-of-code

./: .gitignore  README.md  new_day.sh  pyproject.toml
anno2023/day01/: solution.py
anno2023/day02/: solution.py
anno2023/day03/: test_sample.py
anno2023/day05/: numpy_solution.py  solution.py  test_sample.py  test_script.py
anno2023/day06/: solution.py  test_sample.py
anno2023/day07/: solution.py  test_sample.py
anno2023/day08/: solution.py  test_sample.py
anno2023/day09/: solution.py  test_sample.py
anno2023/day10/: solution.py  test_sample.py
anno2023/day11/: solution.py  test_sample.py
anno2023/day3/: solution.py  test_sample.py
anno2023/day4/: solution.py  test_sample.py
