[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Johan Pelck Olsen (JPQO) <jpqo@novonordisk.com>"]
readme = "README.md"
packages = [
     {    include = "anno2023"},
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.ruff.isort]
known-first-party = ["anno2023"]
